@@ -6,25 +6,27 @@ DIST libssh-0.6.4-libgcrypt_build_fix.patch 1660 SHA256 729e6c4aeacb0c066906b320
 DIST libssh-0.6.4.tar.gz 381835 SHA256 7e3205e2e95bf35b23b83a6485a7d59abe7c7546d01b728f691cf0c374216b52 SHA512 02c1879d7afed9cc8404366c343ea770e97fcdcc7cc467f15b762b2c5724399de3efe69fdf6ee86a607c0f4d2337586f34150b9e0dcc8ccd8e86de79f574cba5 WHIRLPOOL e086afbe604905bdc024a1ce7503644285fdb394a168b6049e44751c64cdf51ba9e036a32f568d749252ad537fe9f874eadb8aea92de580f9c93a9d91a6ef457
 DIST libssh-0.6.5-compilefix.patch 668 SHA256 90eb8bd3e31c4df5a5aa40d4e0d440c290190be8524396c979dc2fe5005c9b61 SHA512 8ade351e6499922bc983cfb1b7042a8eca4322b64a5fd1eb9d4afc0baba311f0af970dc3f43b864d510d3a4668f58e83e6214a6e90ddbf4199ab9fea6c73d036 WHIRLPOOL d65f3505eae97feb16f5b0cdfc83a6638dcdca2916facedd05b9987797b72231725c0834355048e48bc38413ad1b9c718cfbdad410fbd13573b38c919ccbac0b
 DIST libssh-0.6.5.tar.xz 281564 SHA256 0fd52763e033d5e9b1cd55f60a74e619731c5ba630938eec95682dbe4cf7dc2c SHA512 55d614ff311a29a20b93094ac1dd16a2ad1345368b874a0e385f0c235e8defde8816948ab04eab68ade477a0a6901b317c7884df1ba3078cf12db89dfc4169cc WHIRLPOOL 9801eee45a178306b0645d75c268df381d206a8c566695d8b6c228ea7f5638a313bdbdf990ad7bd299c24d280595007b44fd16449ee3a0643b6e2084bb148d09
+DIST libssh-0.7.0.tar.xz 349548 SHA256 0551bc341f33641ddc349b31730b3010870ad26a4dbfad3d090a1738fe3e402b SHA512 2ef897f7295d2b4ba63f0d797c51ba2c8cb7d8569152d34ec982d2b88adccc97c8f2aabea3bbc88b72421256d3d0be661f82bbcf5c4b151018b5a695be445568 WHIRLPOOL 1337ca1fc69c5de60f2d33ce1d66f04b0d2807b01794af6787a5d4b7ca84715afe00ff72d8b1bb21590186b7af9058fa90c69af865a0534402735076dec51397
 EBUILD libssh-0.6.4.ebuild 2552 SHA256 5a8d965fa9ec78752c52e7c62ca5e13f1dde595de790b7a237aed78d16aca429 SHA512 801347ae58bb73e755676ca031c8419cc8ba3a46bafcfe253631f5144ee3d8005c990d8cd92fdff54edb4f64a5ceca84e161f3a0edee6a8f39d663874ab8cd20 WHIRLPOOL d099722b1aeda44f98b0f04117e73c49751d74441d4cc5911ca38cac6fd6e953cfd6c1b2cfe6ba2aeef634a16b49486c96383486c92ece5a5e47f8e7ac82be11
 EBUILD libssh-0.6.5.ebuild 2537 SHA256 5b7b3346c6180cf6e1d7f22c9dccdbea0e771c97864126173a9ead7199481c23 SHA512 531318cc8cab4f16316baa7412234abdc40d10f5a2502cacd1a815c6e210a983276edd32ecf5271c86bda277fdde5e0232c4c7c0241e70cdbdf8b765c663d4af WHIRLPOOL c9a17e2e920b3120732bf27b75f4d9f2f2d14c87cfbc28085476034c165d51a46484594eb2dad38d6e0b7f8bb62ccd9a2d49a3f03b3aea1418dccf3bc5f8f80c
+EBUILD libssh-0.7.0.ebuild 2386 SHA256 51f8e8b017354a87af247031777f138aabb7d3abcad19e51e1f43de3c20cae6e SHA512 c5a9c91e6b6e693dd1cc35f2bcb4731ce6db5798198c746db9b9c780d40d01a9f3d1c3201dacd147395e8424847ae3ce5d90a56cf2eac2960e94e553b26bfa0e WHIRLPOOL 64abd0ce0c32df88d672a6e79dbc0f7c4b0c313732c707f028225be79dace483bffae27ff37938e8c2172f2026b55664ca1e29296a5361937fae98a3d33051df
 EBUILD libssh-9999.ebuild 2165 SHA256 19217cf4a65823f37239ed541e83e6ec8ded43668fe7bb6bdb0fe3900de22009 SHA512 92222628c3851d025bc645ced70092687af28c1f264621d3ac230e87d4b2269f8e09838f1cafd53191457fbab4b8e683914f25213c46dd673e012d2c36d23665 WHIRLPOOL c2dd2212aaef30e06abec149f8e4cc661998feb89c4eeafad6b67ea37ccce597e907fd1bcd02a9d27dca8febf0eeaf9c5c4edaa81f6566c2603131f52e13edbf
-MISC ChangeLog 17652 SHA256 496e34eadabca656e36f7e6a6ca4fbfb0f82299c9b6cdca7e86f4c6d39c821ad SHA512 89eac780c07d44d405fd70e92e5baf3858b26de351e86a26dcbcf2d449a630591323f02d5f2665d4d85107d73b8c01b4371a778a6561635f7a3713e75bd04cde WHIRLPOOL ad9023a78b3ff9e005bc2714308d2d59a6397e243701e991bb345f83ea1a7af12c8cd785db90fe8decb5298864a01f7837ed2e88cbcc26567a7bcbf0de444376
+MISC ChangeLog 17783 SHA256 cfcd5733ac7d50b3b3f83a9643450a9ccc5f7729daf42636e167eb3f9c8b1f95 SHA512 3be513d9d51c88f1eef178d923d28f4760ede62e1a60d7ea614a6c9fb3bf1ebb84829e7bf9374900f8d7500d98449d0e51eb32789b8574a1ac2f4da853643cab WHIRLPOOL 371f4b00bf894d4d4d45638cdf59057a7482d01826db1bec364b5a9bc476762abd927f64881d8fcebb431d69ac948a46ca38a04228af925f4992e1cd60aac281
 MISC metadata.xml 577 SHA256 fe4b1a79301454baa0772dd181ad10ea5f835a904d1eb71c94890bd276891116 SHA512 dcd1badfa0be8068167dd095631366e968046fba7e5f62851f2f7c463ba8c8af427ec487abff41c236f269fdfd376f5716e4ffa4a5042f2ab82bc5bdb85b21e6 WHIRLPOOL e9731fd1b62a2d0d5836420585f8a31f11bb6f5e3ff12d9853ccb66321dd63642bddb1f128e117ebd1f7f58209f17a98f14c8b7e9c1e1b091c6ab668595ac524
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVUwOlAAoJELp701BxlEWfdbYQAIvCfY7Z7xyUSDlt+lFfoc/0
-SvIvK6O9lWAXKwpX5L3btMz7yXS5GnoYysuBzeuTeGzQg+9zgMsd3JRakuc3Pat6
-cs8K+i5lc9yOWVS6RbP9bSCu3Cbqnpupt19re+1Vmd/CQNuZL4AxDN/rhqC4C5yQ
-/qXr+SDdoC2ws9oL6Y2NxdpbTlQQjurTQ3CVz6gsHmAM6+Z/sJsupfaC6JuH9il5
-6nlhmE5LOwKXo5keU3nJUujZhRU7l65Lc7yWMy8r7j4+oDh/B2KRzcE9+GflLuOf
-GC7nwCd9cON8Uwl9a5tm4Kb1wO5yNNmzlEBcBEk/y6oHyMJTgnhmm6c/BIl87qVl
-JP5lgnvXUzSyCNRetUoCIyn5LlgUgW7a5v4jggW+NvrO+Ecw4uilAKL2bW3RwtCF
-dz/hvcuSvBNEtkLkv5hcqflw78LW65jfiSjDv7JpfHi8i0LNjnYmJ9ZyWpH6bkuA
-q3Rs6yAiTgra1xVNoSgTUI/x3n4+KQn+JxgINvh6Vd+2DlmjoDC8t4aMXaY8nLCD
-jTozJVAVMNMsODudUs0p9fHlNpmbQVRWjg0AOodlY6HOREatv7CvqBIaBCzcn/mN
-fYK/6fk/Jx5nV1Ztn/96jM3gCtzFw6/OVO7BihkOxiejpazqkhS6gWmeglBZSBg1
-B3uDfF2mQOwJXzTjTrB3
-=JypA
+iQIcBAEBCAAGBQJVU1wsAAoJEPiazRVxLXTFhHoP/i9dx4ncemtKpDroYVGfWJ8o
+pQTwS/tAUdhrG5kHMR6XcGf7i6L+qVkq3vLVVID786B0HV9thtSs5i5DqxEfWwn4
+F/9h+3Eui5fpDFyL+kyTSgc+wM/Sf/uLHrABax6DwMo9xMtau2m3womOKm7SDfeH
+1oCVYeCxFcwpm6qGxS9BC2Px99xFnSmm9Anmz8s+NdPKsSKAOEUYqLAhwrKfcuw1
+uHINAAuKnNvO2Y4vhnnBKk+12i/qYzjHhM3Tat8z3WFRiajlewJmIs1kpt27BwI4
+lqTdWIBOJo1A2wZsToscedFRWtL/X9dbRCdE10pLVcq9uZOUFdb98F5nEJTZhPBI
+b0mOP1jwORryST60chZuhcrJ5e85w/kcq2RV+wRmdk6QVvrupYGNf79WcKMexC79
+luWoEqdzEN1t+u5ka+lO67otJJrNKMVXkwbVnuF/7ZbIXtsFxn1KUqBAMbLjRwvj
+5vTcQ3mBsKANUaxrqs2oQ/ranIb8iK9PRbRecXd1YwpyU8qLhfsJXeKJeVmFO1or
+wcGoktdW0aWdVQXIkDRHELOly1lcnH9A3VRU9OEZP0muqAtpjAuyidgOj2Vd0xb6
+d6fj7v81RbfG1isWM2fkdYfWTBEOTeqlPwymFlClSVYjrBYb5dS9PFcmT1EF/7TD
+puDBckJFKYStryDKN/Hw
+=kWn8
 -----END PGP SIGNATURE-----
